--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
