--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
-    "react-csv": "^2.2.2"
+    "morgan": "^1.10.0"
   }
 }
