change script nam,e

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Raftlabs assignment",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "Tarak",
   "license": "ISC",
