--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raftlabs",
   "version": "1.0.0",
   "description": "Raftlabs assignment",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
